--- a/NoNote/Storyboard/Base.lproj/Main.storyboard
+++ b/NoNote/Storyboard/Base.lproj/Main.storyboard
@@ -21,13 +21,13 @@
         <!--Calendar View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CalendarViewController" customModule="NoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CalendarViewController" customModule="NoDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6x-8V-N6I" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="64" width="375" height="330"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="330" id="9n0-7J-zPw"/>
@@ -121,23 +121,38 @@
         <!--Title-->
         <scene sceneID="5ea-RE-73s">
             <objects>
-                <viewController storyboardIdentifier="NoteViewController" id="168-0l-qc9" customClass="NoteViewController" customModule="NoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NoteViewController" id="168-0l-qc9" customClass="NoteViewController" customModule="NoDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g0K-h5-R0e">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gnq-Xr-Yhz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" red="0.1137254902" green="0.10980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0aa-4P-sIm">
+                                <rect key="frame" x="309" y="190" width="56" height="56"/>
+                                <color key="backgroundColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="4bZ-th-J8V"/>
+                                    <constraint firstAttribute="width" constant="56" id="i0K-uf-5Y4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
+                                <state key="normal" title="Delete">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteDiary:" destination="168-0l-qc9" eventType="touchUpInside" id="qN2-X1-0md"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DtI-yY-pY1">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n3J-fY-njf" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
-                                        <rect key="frame" x="157" y="303" width="60" height="60"/>
+                                        <rect key="frame" x="157" y="271" width="60" height="60"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="acD-Vi-WJr"/>
@@ -155,10 +170,12 @@
                         <constraints>
                             <constraint firstItem="Gnq-Xr-Yhz" firstAttribute="top" secondItem="vii-qs-Oex" secondAttribute="top" id="397-hF-4os"/>
                             <constraint firstItem="DtI-yY-pY1" firstAttribute="leading" secondItem="vii-qs-Oex" secondAttribute="leading" id="H0L-mX-6V5"/>
+                            <constraint firstItem="0aa-4P-sIm" firstAttribute="top" secondItem="vii-qs-Oex" secondAttribute="top" constant="190" id="IWg-2N-1OZ"/>
                             <constraint firstItem="vii-qs-Oex" firstAttribute="bottom" secondItem="DtI-yY-pY1" secondAttribute="bottom" id="LD7-Nw-BdV"/>
                             <constraint firstItem="vii-qs-Oex" firstAttribute="bottom" secondItem="Gnq-Xr-Yhz" secondAttribute="bottom" id="RzF-lB-9ol"/>
                             <constraint firstItem="Gnq-Xr-Yhz" firstAttribute="leading" secondItem="vii-qs-Oex" secondAttribute="leading" id="XIx-rt-F30"/>
                             <constraint firstItem="vii-qs-Oex" firstAttribute="trailing" secondItem="Gnq-Xr-Yhz" secondAttribute="trailing" id="bEG-Ad-TOd"/>
+                            <constraint firstItem="vii-qs-Oex" firstAttribute="trailing" secondItem="0aa-4P-sIm" secondAttribute="trailing" constant="10" id="oCf-An-FXv"/>
                             <constraint firstItem="vii-qs-Oex" firstAttribute="trailing" secondItem="DtI-yY-pY1" secondAttribute="trailing" id="pEC-Al-gSo"/>
                             <constraint firstItem="DtI-yY-pY1" firstAttribute="top" secondItem="g0K-h5-R0e" secondAttribute="top" id="y5E-n9-zBk"/>
                         </constraints>
@@ -173,6 +190,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="deleteButton" destination="0aa-4P-sIm" id="wEX-3Y-Q4f"/>
                         <outlet property="indicatorBackgourndView" destination="DtI-yY-pY1" id="rcV-9v-gPu"/>
                         <outlet property="indicatorView" destination="n3J-fY-njf" id="2Ly-Nk-xlq"/>
                         <outlet property="noteTextView" destination="Gnq-Xr-Yhz" id="Zos-u5-0bC"/>
@@ -187,7 +205,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zVm-EP-VPU" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pEO-3f-q40">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="pEO-3f-q40">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.2156862745" green="0.74117647060000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -206,7 +224,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q55-sm-0j1" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e4f-QD-32C">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="e4f-QD-32C">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.2156862745" green="0.74117647060000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
